--- a/app/blog/posts/an-introduction.mdx
+++ b/app/blog/posts/an-introduction.mdx
@@ -6,22 +6,33 @@ summary:
 tags: updates, personal
 ---
 
-Welcome to my digital home! I'm Jonathan, a passionate software developer and lifelong learner. This 
-site serves as my own little personal corner of the internet; a place to document my journey, showcase 
-projects, and share valuable resources I've discovered along the way.
+### Welcome!
 
-At heart, I'm driven by curiosity and a relentless desire to improve, whether that's sharpening my 
-technical skills or helping others reach their full potential. I believe growth is a continuous, 
-collaborative process, and I'm enthusiastic about supporting others in their own learning journeys.
+Like most people who are into technology, I like to learn new things... More times than I can count, I've looked
+a topic up, taken some action, learned something new, and then never touch that particular bit of information in my
+head again until the thing in question either breaks, needs to be updated, or needs improvements. I then need to do
+more research to refresh the knowledge (I call this spin-up time.. maybe even turbo lag, for those interested in cars),
+before I can actually start working on it again.
 
-As someone primarily experienced in backend development, this site is also an exciting playground for me 
-to explore and experiment with web technologies. While there isn't much yet, you'll eventually be 
-able to find a range of projects here, from detailed walkthroughs of backend solutions I've engineered to 
-creative front-end explorations as I expand my horizons.
+It's a pain to be stuck in that loop, and so this site is an effort on my part to both help me retain information better
+by putting it into a walk-through format (basically restructuring it as I learn), and hopefully share it with others who
+are interested.
 
-Beyond projects, I'm assembling a curated collection of resources that have greatly benefited me 
-personally and professionally-tools, articles, tutorials, and guides that I believe can help others 
-thrive too.
+It will also serve as a fun log of all the things I work on, so when I inevitably forget what I did, I can always
+reference it here!
 
-Feel free to browse around, reach out, or leave a comment. Whether you're here to learn, find 
-inspiration, or connect, I'm glad you've stopped by. Let's learn and grow together!
+### Resources
+
+I also want to track all of the useful resources I've found (whether it's books or simply useful websites), and so I'll
+be steadily adding to the library section of this site. It will include both beginner and advanced resources, and I'm
+hoping it be useful to both people who are trying figure out where to get started on a particular topic, and also those
+who are just looking to learn more!
+
+### Projects
+
+I have a folder of personal projects (~60 repositories), accumulated throughout my years of software development, and
+while not all of them are suitable for sharing, I'm going to try and clean them up and share them here. It's mostly
+backend experimentation or scripting, with a couple of frontend experiments mixed in. Depending on the project type, I
+might just list it and reference a README and a link to a repo, or I might actually host it so you can try it out!
+
+Thanks for reading!
